@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class Organization {
    name
    vatNumber
    website
    phoneNumber
    email
}

class Task {
    reference
    description
    informalDesc
    technicalDesc
    duration
    cost
}

class Category {
    description
}

class Employee {
    name
    email
    position
    phone
}

'class User {
'    name
'    email
'    password
'}

'Platform "1" -- "*" Organization : has registered >
'Platform "1" -- "*" Category : defines >
Organization "1" - "0..*" Employee : has >
Organization "1" - "0..*" Task: owns >
'Task "*" -- "1" Employee: created by >
Employee "1" -- "*" Task : creates >
'Employee "0..1" -- "1" User: acts as >
Task "*" - "1" Category: cataloged as >
@enduml